syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.huel.cloudhub.server.rpc.status";
option java_outer_classname = "StatProtos";

enum SerializedServerStatusCode {
  HEALTHY = 0;
  DAMAGED = 1;
  DOWN = 2;
}

//
message SerializedDamagedContainerReport {
  string container_id = 1;
  repeated string file_id = 2;
}

message SerializedServerStatus {
  map<string, string> status = 2;
  repeated SerializedDamagedContainerReport report = 3;
}



